# diyun

./: .gitignore  PROJECT_COMPLETE_SUMMARY.md  README.md  debug_app.py  fix_modelscope_largelist.py  nuitka-crash-report.xml  nuitka_build.py  pyproject.toml  requirements.txt  test_logging.py  test_modelscope_tasks.py  view_logs.py
config/: config.ini
src/music_generator/: main.py
src/music_generator/config/: config_manager.py
src/music_generator/gui/: main_window.py
src/music_generator/models/: modelscope_client.py
src/music_generator/utils/: audio_processor.py  logging_config.py
