[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "diyun-music-generator"
version = "1.0.0"
description = "DiffRhythm谛韵音乐生成器 - 使用ModelScope平台的文本到音乐生成应用"
readme = "README.md"
authors = [{name = "Developer", email = "developer@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "modelscope>=1.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.27.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0"
]

[project.scripts]
diyun-music-generator = "music_generator.main:main"

[tool.setuptools.packages.find]
where = ["src"]